--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "express": "^4.18.2",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "mongoose": "^7.3.1",
+    "uuid": "^9.0.0"
   }
 }
